[package]
name = "map-api"
description = "Raft state machine"
version = "0.2.1"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
edition = "2021"

[features]

[dependencies]
async-trait = { version = "0.1.77" }
futures = "0.3.24"
futures-util = "0.3.24"
log = { version = "0.4.21", features = ["serde", "kv_unstable_std"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
stream-more = { version = "0.1.3" }

[dev-dependencies]
anyhow = { version = "1.0.65" }
pretty_assertions = { version = "1.3.0" }
tempfile = { version = "3.4.0" }
tokio = { version = "1.35.0", features = ["full"] }
async-trait = { version = "0.1.77" }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
